# fira-autonomous-rc-car

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_SOURCES.md  LICENSE  README.md  README_EN.md  RELEASE_INFO.md
docs/: electronics-bom.md  lane-detection-adaptation.md  purchase-list.md  regulation-summary.md
firmware/drive_controller/: README.md  drive_controller.ino
models/Print-01_DKS-Pro_DukeDoks_Main-body_One-piece-Body/: Print-01_DKS-Pro_DukeDoks_Main-body_One-piece-Body.stl
models/Print-02_DKS-Pro_DukeDoks_Gearbox/: Print-02_DKS-Pro_DukeDoks_Gearbox.3mf  Print-02_DKS-Pro_DukeDoks_Gearbox.stl
models/Print-03_DKS-Pro_DukeDoks_Differential-Box/: Print-02_DKS-Pro_DukeDoks_Gearbox.3mf  Print-03_DKS-Pro_DukeDoks_Differential-Box.stl
models/Print-04_DKS-Pro_DukeDoks_Differential/: Print-02_DKS-Pro_DukeDoks_Gearbox.3mf
models/Print-05_DKS-Pro_DukeDoks_Front-Arms/: Print-02_DKS-Pro_DukeDoks_Gearbox.3mf
models/Print-06_DKS-Pro_DukeDoks_Rear-Arms/: Print-02_DKS-Pro_DukeDoks_Gearbox.3mf  Print-06_DKS-Pro_DukeDoks_Rear-Arms.stl
mounts/: README.md  camera_mount.scad
ros_ws/src/fira_car_control/: package.xml  setup.cfg  setup.py
ros_ws/src/fira_car_control/fira_car_control/: algorithms.py  lane_detection_node.py  serial_bridge_node.py  speed_control_node.py  steering_control_node.py
ros_ws/src/fira_car_control/launch/: car_bringup.launch.py
ros_ws/src/fira_car_control/test/: test_algorithms.py
tools/: calibrate_camera.py  calibrate_hsv.py  stl_bbox.py
(+15 files in other folders)
